Update Companion app and reminders
